[gd_scene load_steps=18 format=2]

[ext_resource path="res://game.gd" type="Script" id=1]
[ext_resource path="res://paddle.gd" type="Script" id=2]
[ext_resource path="res://assets/left_pallete.png" type="Texture" id=3]
[ext_resource path="res://assets/right_pallete.png" type="Texture" id=4]
[ext_resource path="res://ball.gd" type="Script" id=5]
[ext_resource path="res://assets/ball.png" type="Texture" id=6]
[ext_resource path="res://assets/separator.png" type="Texture" id=7]
[ext_resource path="res://horizontal_wall.gd" type="Script" id=8]
[ext_resource path="res://goal.gd" type="Script" id=9]
[ext_resource path="res://font.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://beep.wav" type="AudioStream" id=11]
[ext_resource path="res://plop.wav" type="AudioStream" id=12]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 16 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 320, 4 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 4, 200 )

[sub_resource type="DynamicFont" id=5]

size = 50
use_mipmaps = false
use_filter = false
font_data = ExtResource( 10 )
_sections_unfolded = [ "Extra Spacing", "Font", "Resource", "Settings" ]

[node name="game" type="Node2D" index="0"]

position = Vector2( -1, -2 )
script = ExtResource( 1 )

[node name="left" type="Area2D" parent="." index="0"]

editor/display_folded = true
position = Vector2( 68, 206 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 2 )
_sections_unfolded = [ "Collision", "Pause", "Transform" ]

[node name="sprite" type="Sprite" parent="left" index="0"]

texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="collision" type="CollisionShape2D" parent="left" index="1"]

shape = SubResource( 1 )

[node name="right" type="Area2D" parent="." index="1"]

editor/display_folded = true
position = Vector2( 557.947, 193.53 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="sprite" type="Sprite" parent="right" index="0"]

texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="collision" type="CollisionShape2D" parent="right" index="1"]

shape = SubResource( 1 )

[node name="ball" type="Area2D" parent="." index="2"]

editor/display_folded = true
position = Vector2( 320, 200 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 5 )
_sections_unfolded = [ "Collision", "Transform" ]

[node name="sprite" type="Sprite" parent="ball" index="0"]

texture = ExtResource( 6 )

[node name="collision" type="CollisionShape2D" parent="ball" index="1"]

shape = SubResource( 2 )

[node name="separator" type="Sprite" parent="." index="3"]

position = Vector2( 320, 200 )
texture = ExtResource( 7 )
_sections_unfolded = [ "Transform" ]

[node name="ceiling" type="Area2D" parent="." index="4"]

editor/display_folded = true
position = Vector2( 321, -2 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 8 )
_sections_unfolded = [ "Transform" ]

[node name="collision" type="CollisionShape2D" parent="ceiling" index="0"]

shape = SubResource( 3 )

[node name="floor" type="Area2D" parent="." index="5"]

editor/display_folded = true
position = Vector2( 321, 406 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 8 )
_sections_unfolded = [ "Transform" ]

[node name="collision" type="CollisionShape2D" parent="floor" index="0"]

shape = SubResource( 3 )

[node name="goal_left" type="Area2D" parent="." index="6"]

editor/display_folded = true
position = Vector2( -3, 202 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 9 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="goal_left" index="0"]

shape = SubResource( 4 )

[node name="goal_right" type="Area2D" parent="." index="7"]

editor/display_folded = true
position = Vector2( 645, 202 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 9 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="goal_right" index="0"]

shape = SubResource( 4 )

[node name="score_left" type="Label" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 215.0
margin_top = 13.0
margin_right = 315.0
margin_bottom = 52.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Grow Direction", "Rect", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="score_right" type="Label" parent="." index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 333.0
margin_top = 13.0
margin_right = 433.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="fps_count" type="Label" parent="." index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="beep" type="AudioStreamPlayer" parent="." index="11"]

stream = ExtResource( 11 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="plop" type="AudioStreamPlayer" parent="." index="12"]

stream = ExtResource( 12 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="area_entered" from="left" to="left" method="_on_area_entered"]

[connection signal="area_entered" from="right" to="right" method="_on_area_entered"]

[connection signal="area_entered" from="ceiling" to="ceiling" method="_on_area_entered"]

[connection signal="area_entered" from="floor" to="floor" method="_on_area_entered"]

[connection signal="area_entered" from="goal_left" to="goal_left" method="_on_area_entered"]

[connection signal="area_entered" from="goal_right" to="goal_right" method="_on_area_entered"]


